--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "yoshi",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "discord.js-commando": "^0.10.0"
+    "discord.js": "^11.3.2"
   }
 }
+
+
